--- a/package.json
+++ b/package.json
@@ -7,12 +7,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@octokit/rest": "^18.12.0",
+    "framer-motion": "^6",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.2.2"
   },
   "devDependencies": {
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0"
-  }
+  },
+  "name": "nextjs-githubRestApi",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/jennyhuoh/nextjs-githubRestApi.git",
+  "author": "jennyhuoh <huoh.li@gmail.com>",
+  "license": "MIT"
 }
