--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@octokit/rest": "^18.12.0",
+    "formik": "^2.2.9",
     "framer-motion": "^6",
     "next": "12.1.0",
     "react": "17.0.2",
